window-service: Calls SetClientArea() on server when client-view changes

The client area is dictated by the bounds of the ClientView. This patch
makes DesktopWindowTreeHostMus observe bounds changes of the ClientView, not
the non-client-frame-view.

BUG=891064
TEST=covered by test

Change-Id: Ia96c2be5b9af1bce24d253e01dbf673accc20d3a
Reviewed-on: https://chromium-review.googlesource.com/c/1312482
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604679}
Former-commit-id: b5129c9a6cb8cd052190d59a1c8c55b9be6e9e96